fix z-index

--- a/components/modal/modal.scss
+++ b/components/modal/modal.scss
@@ -6,7 +6,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 10000;
   background: rgba(14, 68, 71, 0.2);
   backdrop-filter: blur(40.774227142333984px);
   overflow: hidden;
