--- a/components/status-selector/dropdown.scss
+++ b/components/status-selector/dropdown.scss
@@ -9,7 +9,7 @@
   position: relative;
   max-height: 300px;
   transition: max-height 0.4s;
-  z-index: 10;
+  z-index: 5000;
   &_minimized {
     max-height: 32px;
     .dropdown__arrow {
